--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Reset */
+/* -------------------------------------------------- */
 *,
 *:after,
 *:before {
@@ -28,9 +30,69 @@ h3 {
   padding: 0;
 }
 
-.text-center{text-align: center;}
-.text-left{text-align: left;}
-.text-right{text-align: right;}
+ol,
+ul {
+  list-style: none;
+}
 
-.fl-left{float: left;}
-.fl-right{float: right;}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: #f9014d;
+}
+
+img {
+  max-width: 100%;
+  border: none;
+}
+/* GERAL */
+/* -------------------------------------------------- */
+.row {
+  float: left;
+  width: 100%;
+}
+
+.section {
+  float: left;
+  width: 100%;
+}
+
+.section-header {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.section-header h1 {
+  font-size: 38px;
+  font-weight: normal;
+}
+
+.content {
+  max-width: 960px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.fl-left {
+  float: left;
+}
+
+.fl-right {
+  float: right;
+}
