--- a/src/css_components/layout/Estatistic.css
+++ b/src/css_components/layout/Estatistic.css
@@ -35,6 +35,21 @@
     }
 }
 
+/* BREACKPOINT MÁXIMOS */
+@media(max-width: 767.9px){
+    .estatisticas{
+        flex-direction: column;
+    }
+    .estatisticas-item{
+        min-width: 90%;
+    }
+    .estatisticas-item:not(:last-of-type){
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #ccc;
+    }
+}
+
 /* BREACKPOINT MÍNIMOS */
 @media(min-width: 768px){
     .estatisticas{
